plugins {
    id 'base'
    id 'maven-publish'
}

allprojects {
    group = rootProject.group
    version = rootProject.version

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    dependencies {
        api "ch.qos.logback:logback-classic:$logback_version"
        api "cn.hutool:hutool-all:$hutool_version"
        api "com.google.code.gson:gson:$project.gson_version"
//        api "com.alibaba.fastjson2:fastjson2:$fastjson_version"

        api "org.jetbrains:annotations:24.0.0"

        testImplementation platform('org.junit:junit-bom:5.10.0')
        testImplementation 'org.junit.jupiter:junit-jupiter'
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        options.release.set(25)
    }

    test {
        useJUnitPlatform()
    }

    compileJava {
        options.compilerArgs += "-parameters"
    }

}

// ========== 根项目配置 ==========
// 根项目不生成自己的 jar，而是收集 core 模块的所有构建产物

// 如果没有 java-library 插件，根项目不会有 jar 任务；
// 使 assemble/ build 生命周期依赖 core 模块的完整构建
assemble.dependsOn(':core:build')

tasks.register('collectCoreOutput', Copy) {
    dependsOn ':core:build'
    description = '将 core 模块的所有构建产物收集到根项目 build 目录'
    group = 'build'

    from(project(':core').layout.buildDirectory) {
        include 'libs/**'
        include 'resources/**'
    }
    into layout.buildDirectory
}

build.dependsOn([collectCoreOutput])
